<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="facebook_app_id">1926541280818699</string>
    <string name="fb_login_protocol_scheme">fb1926541280818699</string>
    <string name="instagram">Instagram</string>
    <string name="phone_number_email_and_username">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="get_help_logging_in">Get help logging in.</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in.</string>
    <string name="signed_in_successfully">Signed in Successfully</string>
    <string name="signed_up_successfully">Signed Up Successfully</string>
    <string name="enter_email">Please enter an email</string>
    <string name="enter_password">Please enter a password</string>
    <string name="incorrect_email">The email format is incorrect! Please Enter a valid email</string>
    <string name="short_password">Password too short! Please enter at least 6 characters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="reels">Reels</string>
    <string name="liked">Liked</string>
    <string name="account">Account</string>
    <string name="post_image">Post Image</string>
    <string name="profile_pic_round">Profile Pic Round</string>
    <string name="likes_image">Likes Image</string>
    <string name="likes_count">56</string>
    <string name="comments_image">Comments Image</string>
    <string name="_12">12</string>
    <string name="insta_id">hiteshchopra11</string>
    <string name="search_screen">Search Screen</string>
    <string name="reels_screen">Reels Screen</string>
    <string name="account_screen">Account Screen</string>
    <string name="liked_screen">Liked Screen</string>
    <string name="network_error">Network Error occurred</string>
    <string name="test_result">Fail</string>
    <string name="image">Image</string>
    <string name="please_enter_a_query_to_search">Please enter a query to search</string>
    <string name="some_error_occurred_please_try_again_later">Some Error Occurred please try again later!</string>
    <string name="search_image_ratio">16:9</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="todo">TODO</string>
</resources>