<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeScreen"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/home" />


    <item
        android:id="@+id/searchScreen"
        android:icon="@drawable/ic_baseline_search"
        android:title="@string/search" />


    <item
        android:id="@+id/reelsScreen"
        android:icon="@drawable/ic_baseline_reels"
        android:title="@string/reels" />


    <item
        android:id="@+id/likedScreen"
        android:icon="@drawable/ic_baseline_like"
        android:title="@string/liked" />

    <item
        android:id="@+id/accountScreen"
        android:icon="@drawable/ic_baseline_user"
        android:title="@string/account" />

</menu>